updates - sep-10 12:24 PM

--- a/assets/themes/light/css/user-style.css
+++ b/assets/themes/light/css/user-style.css
@@ -1,3 +1,6 @@
+/* imports */
+@import url('module-css/08-project.css');
+@import url('swiper.min.css');
 /*----------------------------------------------
 Typography
 ----------------------------------------------*/
